--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,10 @@ include 'www'
 include 'python'
 include 'framework'
 include 'unityclient'
+
+buildCache {
+    local {
+        directory = new File(rootDir, '.gradle/build-cache')
+        removeUnusedEntriesAfterDays = 30
+    }
+}
