--- a/testcontainers/build.gradle
+++ b/testcontainers/build.gradle
@@ -17,6 +17,9 @@ repositories {
 
 dependencies {
     api "org.testcontainers:testcontainers"
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonDatabindVersion"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonDatabindVersion"
 }
 
 task createPostgresImage(type: DockerBuildImage) {
