--- a/vertx-sync/build.gradle
+++ b/vertx-sync/build.gradle
@@ -7,12 +7,12 @@ apply from: '../gradle/instrument.gradle'
 apply plugin: 'maven'
 
 dependencies {
-    api 'io.vertx:vertx-core:3.9.2'
+    api "io.vertx:vertx-core:$vertxVersion"
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'io.vertx:vertx-docgen:0.9.2'
-    implementation 'io.vertx:vertx-codetrans:3.9.2'
+    implementation "io.vertx:vertx-codetrans:$vertxVersion"
 
-    testImplementation 'io.vertx:vertx-unit:3.9.2'
+    testImplementation "io.vertx:vertx-unit:$vertxVersion"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
