--- a/game/build.gradle
+++ b/game/build.gradle
@@ -9,7 +9,7 @@ apply from: '../gradle/instrument.gradle'
 dependencies {
     api project(':client')
     api project(':core')
-    api 'io.vertx:vertx-core:3.9.2'
+    api "io.vertx:vertx-core:$vertxVersion"
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation project(':vertx-sync')
 
