--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.vfs.watch=true
 classgraphVersion=4.8.90
 jacksonVersion=2.11.3
 jacksonDatabindVersion=2.11.3
 spellsourceVersion=0.8.89
+vertxVersion=3.9.2
