--- a/micro/build.gradle
+++ b/micro/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation project(":client")
     implementation project(':vertx-sync')
     implementation project(path: ":game", configuration: 'uninstrumentedJars')
-    implementation 'io.vertx:vertx-core:3.9.2'
+    implementation "io.vertx:vertx-core:$vertxVersion"
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation 'org.slf4j:slf4j-api:1.7.22'
     implementation 'org.jetbrains:annotations:16.0.2'
