--- a/net/build.gradle
+++ b/net/build.gradle
@@ -58,18 +58,18 @@ dependencies {
     implementation group: 'joda-time', name: 'joda-time', version: '2.10.2'
     implementation group: 'com.lambdaworks', name: 'scrypt', version: '1.4.0'
     implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
-    api group: 'io.vertx', name: 'vertx-core', version: '3.9.2'
+    api group: 'io.vertx', name: 'vertx-core', version: vertxVersion
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation project(':vertx-redis-cluster')
-    implementation group: 'io.vertx', name: 'vertx-mongo-client', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-web-client', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-service-discovery', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-web', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-auth-common', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-rx-java2', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-micrometer-metrics', version: '3.9.2'
-    implementation group: 'io.vertx', name: 'vertx-mail-client', version: '3.9.2'
+    implementation group: 'io.vertx', name: 'vertx-mongo-client', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-web-client', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-service-discovery', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-web', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-auth-common', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-rx-java2', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-micrometer-metrics', version: vertxVersion
+    implementation group: 'io.vertx', name: 'vertx-mail-client', version: vertxVersion
     implementation 'org.jetbrains:annotations:16.0.2'
     implementation 'io.jaegertracing:jaeger-client:1.2.0'
     implementation 'io.netty:netty-transport-native-epoll:4.1.43.Final:linux-x86_64'
@@ -108,7 +108,7 @@ dependencies {
     testImplementation project(':testutils')
     testImplementation "org.testcontainers:testcontainers"
     testImplementation "org.testcontainers:junit-jupiter"
-    testImplementation group: 'io.vertx', name: 'vertx-junit5', version: '3.9.2'
+    testImplementation group: 'io.vertx', name: 'vertx-junit5', version: vertxVersion
     testImplementation(group: 'org.jboss.resteasy', name: 'resteasy-client', version: '4.5.6.Final') {
         exclude group: 'javax.activation', module: 'activation'
         exclude group: 'org.jboss.spec.javax.annotation', module: '*'
