--- a/vertx-redis-cluster/build.gradle
+++ b/vertx-redis-cluster/build.gradle
@@ -16,20 +16,20 @@ java {
 }
 
 dependencies {
-    api 'io.vertx:vertx-core:3.9.2'
+    api "io.vertx:vertx-core:$vertxVersion"
     api 'org.redisson:redisson:3.13.+'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'io.vertx:vertx-docgen:0.9.2'
-    implementation 'io.vertx:vertx-codetrans:3.9.2'
+    implementation "io.vertx:vertx-codetrans:$vertxVersion"
     implementation 'org.apache.commons:commons-lang3:3.7'
-    testImplementation 'io.vertx:vertx-core:3.9.2'
+    testImplementation "io.vertx:vertx-core:$vertxVersion"
     testImplementation project(':testcontainers')
     testImplementation platform('org.testcontainers:testcontainers-bom:1.15.+')
     compileOnly "javax.annotation:javax.annotation-api:1.3.2"
 //    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
-    testImplementation 'io.vertx:vertx-unit:3.9.2'
+    testImplementation "io.vertx:vertx-unit:$vertxVersion"
     testImplementation "org.testcontainers:testcontainers"
-    testImplementation group: 'io.vertx', name: 'vertx-core', version: '3.9.2', classifier: 'tests'
+    testImplementation group: 'io.vertx', name: 'vertx-core', version: vertxVersion, classifier: 'tests'
     testRuntimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
     testImplementation 'junit:junit:4.12'
 }
