Further improvements to matchmaking

--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,7 @@ subprojects {
                 }
 
                 if (details.requested.group == 'org.junit.jupiter') {
-                    details.useVersion '5.6.2'
+                    details.useVersion junitVersion
                 }
 
                 if (details.requested.name == 'joda-time') {
