--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ classgraphVersion=4.8.90
 jacksonVersion=2.11.3
 jacksonDatabindVersion=2.11.3
 spellsourceVersion=0.8.89
-vertxVersion=4.0.0.CR1
+vertxVersion=4.0.0.CR2
+junitVersion=5.6.2
 shadowPluginVersion=6.1.0
 guavaVersion=26.0-jre
+keycloakVersion=11.0.3
