--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     api project(':game')
     api project(':client')
     api 'org.slf4j:slf4j-api:1.7.22'
-    api 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-    api 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    api "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    api "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     api "io.vertx:vertx-core:$vertxVersion"
     api 'org.jsoup:jsoup:1.11.2'
     api 'org.mockito:mockito-core:2.24.5'
