--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ subprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 
     configurations.all {
