--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,9 @@ classgraphVersion=4.8.90
 jacksonVersion=2.11.3
 jacksonDatabindVersion=2.11.3
 spellsourceVersion=0.8.89
-vertxVersion=4.0.0.CR2
+vertxVersion=4.0.0
 junitVersion=5.6.2
 shadowPluginVersion=6.1.0
 guavaVersion=26.0-jre
 keycloakVersion=11.0.3
+databasesandlifeVersion=14.0.0
